--- a/lui.cabal
+++ b/lui.cabal
@@ -4,31 +4,47 @@ Cabal-Version:       >= 1.2
 Synopsis:            Purely FunctionaL User Interface
 Category:            graphics
 Description:
-  This package contains a set of composable purely funcitonal widgets
-  and a mainloop adapter to adapt the widgets to run in IO.
-  It is currently based on SDL.
+  This package contains a set of composable purely functional widgets
+  and a mainloop adapter to adapt the widgets to run in IO. It is
+  HaskGame based.
+  .
+  HaskGame does not yet wrap SDL properly, so it uses SDL directly as
+  well.
   .
   Project wiki page: <http://haskell.org/haskellwiki/LUI>
   .
-  &#169; 2009 by Eyal Lotem; GPL3 license.
+  &#169; 2009 by Eyal Lotem; BSD3 license.
 
 Author:              Eyal Lotem
 Maintainer:          eyal.lotem@gmail.com
 --Homepage:            http://haskell.org/haskellwiki/LUI
 --Package-Url:         http://code.haskell.org/LUI
-Copyright:           (c) 2008 by Conal Elliott
-License:             GPL3
+Copyright:           (c) 2008 by Eyal Lotem
+License:             BSD3
 Stability:           experimental
 build-type:          Simple
 
 Library
   hs-Source-Dirs:      src
   Extensions:
-  Build-Depends:       base, HaskGame
-  Exposed-Modules:     Graphics.UI.LUI
-                       Graphics.UI.LUI.Widgets.XXX
-  Other-Modules:       main
-                       Example
+  Build-Depends:       base, haskell98, containers, mtl, SDL, haskgame
+  Exposed-Modules:     Graphics.UI.LUI.Accessor,
+                       Graphics.UI.LUI.Draw,
+                       Graphics.UI.LUI.Run,
+                       Graphics.UI.LUI.Widget,
+                       Graphics.UI.LUI.Widgets.Adapter,
+                       Graphics.UI.LUI.Widgets.Box,
+                       Graphics.UI.LUI.Widgets.FocusDelegator,
+                       Graphics.UI.LUI.Widgets.Grid,
+                       Graphics.UI.LUI.Widgets.KeysTable,
+                       Graphics.UI.LUI.Widgets.Space,
+                       Graphics.UI.LUI.Widgets.TextEdit,
+                       Graphics.UI.LUI.Widgets.TextView,
+                       Graphics.UI.LUI.Widgets.Unfocusable
+  Other-Modules:       Example,
+                       Graphics.UI.LUI.Func,
+                       Graphics.UI.LUI.List,
+                       Graphics.UI.LUI.Tuple
 
   ghc-options:         -Wall
 
