--- a/lui.cabal
+++ b/lui.cabal
@@ -27,7 +27,7 @@ build-type:          Simple
 Library
   hs-Source-Dirs:      src
   Extensions:
-  Build-Depends:       base, haskell98, containers, mtl, SDL, haskgame
+  Build-Depends:       base, haskell98, containers, mtl, SDL, haskgame, MaybeT
   Exposed-Modules:     Graphics.UI.LUI.Accessor,
                        Graphics.UI.LUI.Draw,
                        Graphics.UI.LUI.Run,
