--- a/lui.cabal
+++ b/lui.cabal
@@ -5,11 +5,7 @@ Synopsis:            Purely FunctionaL User Interface
 Category:            graphics
 Description:
   This package contains a set of composable purely functional widgets
-  and a mainloop adapter to adapt the widgets to run in IO. It is
-  HaskGame based.
-  .
-  HaskGame does not yet wrap SDL properly, so it uses SDL directly as
-  well.
+  and a mainloop adapter to adapt the widgets to run in IO.
   .
   Project wiki page: <http://haskell.org/haskellwiki/LUI>
   .
@@ -27,18 +23,19 @@ build-type:          Simple
 Library
   hs-Source-Dirs:      src
   Extensions:
-  Build-Depends:       base >= 4 && < 5, haskell98, containers, mtl, SDL, haskgame >= 0.0.6, MaybeT
-  Exposed-Modules:     Graphics.UI.LUI.Image,
-                       Graphics.UI.LUI.Run,
+  Build-Depends:       base >= 4 && < 5, haskell98, containers, mtl, GLUT, MaybeT
+  Exposed-Modules:     Graphics.UI.LUI.Run,
                        Graphics.UI.LUI.Widget,
-                       Graphics.UI.LUI.Widgets.Adapter,
+                       Graphics.UI.LUI.Keymap,
+                       Graphics.UI.LUI.KeyGroup,
+--                       Graphics.UI.LUI.Widgets.Adapter,
                        Graphics.UI.LUI.Widgets.Box,
                        Graphics.UI.LUI.Widgets.FocusDelegator,
                        Graphics.UI.LUI.Widgets.Grid,
-                       Graphics.UI.LUI.Widgets.KeysTable,
+--                       Graphics.UI.LUI.Widgets.KeysTable,
                        Graphics.UI.LUI.Widgets.Space,
                        Graphics.UI.LUI.Widgets.TextEdit,
-                       Graphics.UI.LUI.Widgets.Scroll,
+--                       Graphics.UI.LUI.Widgets.Scroll,
                        Graphics.UI.LUI.Widgets.TextView,
                        Graphics.UI.LUI.Widgets.Unfocusable
   Other-Modules:       Data.Editor.Function,
@@ -53,8 +50,8 @@ Library
 executable lui-example
   hs-Source-Dirs:      src
   Extensions:
-  Build-Depends:       base >= 4 && < 5, haskell98, containers, mtl, SDL, haskgame >= 0.0.6,
-                       MaybeT, data-accessor
+  Build-Depends:       base >= 4 && < 5, haskell98, containers, mtl, GLUT,
+                       MaybeT, data-accessor, graphics-drawingcombinators
   ghc-options : -O2 -Wall
   main-is: Example.hs
   ghc-prof-options:    -prof -auto-all 
